@@ -52,3 +52,9 @@ Fixed normal chat logging as team chat.
 vON flatfile saving instead of tabletokeyvalues.
 Redesigned player level loading to work with callbacks for MySQL.
 Temp Admin's are sent their time countdown on initplayerspawn.
+
+-------------- 9/25/15 ----------------
+
+Converted Rcon to use net library instead of 3+ broken up console commands.
+Changed player meta functions on the server to properly reference player rank instead of relying on unreliable nwvars.
+Replaced instances of IsSuperAdmin that was missed in 5/4/15 update
